Fix center alignment of Header

--- a/src/components/Header.module.sass
+++ b/src/components/Header.module.sass
@@ -2,7 +2,6 @@
 
 .header
   padding: 32px
-  width: 100%
   background-color: $color-primary--dark
   color: #ffffff
 
